...
                        Image(systemName: "plus")
                    }

                    Button {
                        showSettings = true
                    } label: {
                        Image(systemName: "gearshape")
                            .symbolRenderingMode(theme.iconRenderingMode)
                    }
                }
            }
        }
        .sheet(isPresented: $showSettings) {
...
